feat(library-service): rota para retorno de todas as pratileiras do usuario